--- a/public/home.css
+++ b/public/home.css
@@ -9,19 +9,14 @@ body {
   padding: 3px 21px;
   border: 3px solid white;
   border-radius: 5px;
-  font-size: 20px;
+  font-size: 25px;
   background: transparent;
   transition: 0.5s;
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (min-width: 400px) {
   .menu {
-    padding: 3px 21px;
-    border: 3px solid white;
-    border-radius: 5px;
-    font-size: 50px;
-    background: transparent;
-    transition: 0.5s;
+    font-size: 40px;
   }
 }
 
